# csocket-final

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client1  cmake_install.cmake  report.md  test.txt
client/: main.cpp  main.h  share.h
client/data/: anri_a
client/find_file/: find_file.cpp  find_file.h
client/signin/: signin.cpp  signin.h
client/signup/: signup.cpp  signup.h
libs/: constants.h
libs/entity/: user.cpp  user.h
libs/functions/: string_helper.cpp  string_helper.h  string_helpper.cpp  user.cpp  user.h  user_helper.cpp  user_helper.h
libs/md5/: md5.cpp  md5.h
server/: db.txt  main.cpp  main.h
server/data/: list_users.h  users.txt
server/fileio/: fileio.cpp  fileio.h  transfer.cpp  transfer.h
server/request/: request.cpp  request.h
server/signup_login/: signup_login.cpp  signup_login.h
server/test/: test.cpp  test_signup.cpp  test_signup.h
